<resources>
    <string name="app_name">ComputacaoMovel</string>
    <string name="signin">Sign In</string>
    <string name="createAccount">Create Account</string>
    <string name="titleCreate">Create Account</string>
    <string name="CreateExpense">Create expense</string>
    <string name="CreateStudy">Create study</string>
    <string name="AddExpense">Add to expense</string>
    <string name="AddStudy">Add to study</string>
    <string name="ExpenseHistory">Expense history</string>
    <string name="StudyHistory">Study history</string>
    <string name="title_activity_create_expense">CreateExpense</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>